# robotick-knitware

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  TRADEMARK.md  blob.py  docker-build-esp32s3.sh  docker-build-ubuntu.sh  docker-run-esp32s3.sh  docker-run-ubuntu.sh  run-barr-e-brain.sh  setup.py
assets/_src/: MAGG.e Logo.pdn
docs/: 250522_minipaper_cracking_symmetry.ipynb  concept-magg-e-narrator.md  paper-SymmetricLegOptimization_v0.1.ipynb
docs/concepts/: concept-magg-e-narrator.md
docs/decisions/: decision_power_magg-e_v1.md
docs/design/: design_symmetric_leg_constraint.md
docs/papers/utils/: minipaper_cracking_symmetry.py
docs/utils/: minipaper_cracking_symmetry.py
knitware-bots/barr-e/: CMakeLists.txt  CMakePresets.json  CMakeWorkloads.json
knitware-bots/barr-e/body/: CMakeLists.txt  build_run_esp32s3.sh
knitware-bots/barr-e/body/main/: CMakeLists.txt  main.cpp
knitware-bots/barr-e/brain/: CMakeLists.txt  CMakePresets.json  brain_main.cpp  main.cpp
knitware-bots/barr-e/cpp/: CMakeLists.txt  CMakePresets.json  CMakeWorkloads.json  barr-e-main.cpp  build_run_esp32s3.sh  main.cpp
knitware-bots/barr-e/shared/: model.h
knitware-bots/barr-e/spine/: 1_idf_clean.sh  2_idf_build.sh  3_idf_flash.sh  CMakeLists.txt  sdkconfig  sdkconfig.old
knitware-bots/barr-e/spine/main/: CMakeLists.txt  idf_component.yml  main.cpp  spine_main.cpp
knitware-bots/magg-e/: LICENSE  NOTICE  README.md  TRADEMARK.md
knitware-bots/magg-e/assets/_src/: Magg-E-concept-2-blueprint-mine.pdn  Magg-E-concept-2.pdn
knitware-bots/magg-e/docs/papers/: anchor-offset-vs-heel-offet-studs-quant.xlsx
knitware-bots/magg-e/docs/papers/utils/: minipaper_cracking_symmetry.py
